--- a/style.scss
+++ b/style.scss
@@ -66,6 +66,9 @@ body{
     		float: left;
     		width: 50%;
     	}
+    	&-right{
+    		float: right;
+    	}
     	&-name{
     		font-size: 90px;
     		line-height: 1.5em;
